kidsup_web/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kidsupweb
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kidsupweb
  template:
    metadata:
      labels:
        app: kidsupweb
    spec:
      imagePullSecrets:
      - name: eazbee-cr-auth
      containers:
      - name: kidsupweb
        image: "registry.digitalocean.com/eazbeecr/kidsupweb:__TAG__"
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: "/"
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: "/"
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 3
