kidsup_web/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kidsupweb
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: kidsupweb
  ports:
  - name: http
    port: 80
    targetPort: 3000
